Do not fetch a new config if one is already in progress.

Do not fetch a data reduction proxy config due to auth failure if the fetch
of the previous config is ongoing.

BUG=677569

Review-Url: https://codereview.chromium.org/2604293002
Cr-Commit-Position: refs/heads/master@{#441179}

Former-commit-id: 0216e584179ebe2e4ca415930b916f2e76f1b559