components/data_reduction_proxy/core/browser/data_reduction_proxy_config_service_client.h
@@ -276,6 +276,9 @@ class DataReductionProxyConfigServiceClient
   // Time when the IP address last changed.
   base::TimeTicks last_ip_address_change_;
 
+  // True if a client config fetch is in progress.
+  bool fetch_in_progress_;
+
   // Enforce usage on the IO thread.
   base::ThreadChecker thread_checker_;
 
